force-app/main/default/objects/cgcloud__Field_Sales_Activity__c/cgcloud__Field_Sales_Activity__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the field sales activity object. Field Sales Activity (FSA) covers a set of job definition lists.</description>
    <label>Field Sales Activity</label>
    <nameField>
        <displayFormat>FSA-{0000}</displayFormat>
        <label>Field Sales Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Sales Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>