force-app/main/default/objects/cgcloud__Field_Sales_Activity__c/fields/cgcloud__Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_From__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>