force-app/main/default/objects/cgcloud__Field_Sales_Activity__c/fields/cgcloud__Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_Thru__c</fullName>
    <defaultValue>DATE(2099,12,31)</defaultValue>
    <label>Valid Thru</label>
    <type>Date</type>
</CustomField>