force-app/main/default/objects/cgcloud__Field_Sales_Activity__c/validationRules/cgcloud__Check_If_Sales_Org_Is_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Sales_Org_Is_Changed</fullName>
    <active>true</active>
    <description>The Sales Org field cannot be edited after creation.</description>
    <errorConditionFormula>ISCHANGED(cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>The Sales Org can&apos;t be edited after Field Sales Activity creation.</errorMessage>
</ValidationRule>